--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>contact</title>
 </head>
-<body>
+<body style="background-color: darkcyan;">
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
@@ -13,6 +13,8 @@
       <li><a href="/contact">Contact</a></li>
     </ul>
   </nav>
-  <h1> Contact Page</h1>
+
+  <h1>wlcome to contact page</h1>
+
 </body>
 </html>
