--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>error</title>
 </head>
-<body style="background-color:goldenrod;">
+<body style="background-color: bisque;">
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
@@ -14,7 +14,7 @@
     </ul>
   </nav>
 
-  <h1>wlcome to About page</h1>
+  <h1>404 not found</h1>
 
 </body>
 </html>
